--- a/packages/frontend/nginx.conf
+++ b/packages/frontend/nginx.conf
@@ -1,27 +1,26 @@
 server {
     listen 80;
-    
-    # Define o diretório raiz onde os arquivos estáticos estão localizados
     root /usr/share/nginx/html;
     index index.html;
 
-    # Habilita compressão gzip para melhorar performance
+    # Gzip para performance
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
-    # Rota padrão - Single Page Application
+    # Rota SPA (Frontend)
     location / {
         try_files $uri $uri/ /index.html;
     }
 
-    # Rota para a API backend
-    # Importante: Em produção, o proxy do vite.config.js NÃO roda.
-    # O Nginx assume esse papel.
+    # Proxy para API (Backend Fastify)
     location /api/ {
-        # 'geek_backend' é o nome do serviço no docker-compose.yml
-        # '8080' é a porta interna do container Java
-        proxy_pass http://backend:8080/api/;
+        # 'backend' é o nome do serviço no docker-compose
+        # '3000' é a porta padrão do Fastify (ajuste se seu server.ts usar outra)
+        proxy_pass http://backend:3000/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+        proxy_cache_bypass $http_upgrade;
     }
 }
