--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -2,11 +2,11 @@
     "name": "@elo-organico/backend",
     "version": "1.0.0",
     "private": true,
-    "main": "dist/index.js",
+    "main": "dist/server.js",
     "scripts": {
-        "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+        "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
         "build": "tsc",
-        "start": "node dist/index.js"
+        "start": "node dist/server.js"
     },
     "dependencies": {
         "@fastify/cookie": "^11.0.2",
