--- a/packages/frontend/DockerFile
+++ b/packages/frontend/DockerFile
@@ -1,34 +1,28 @@
-# --- Estágio 1: Build (Node.js) ---
-FROM node:18-alpine AS build
+# Estágio 1: Build
+FROM node:20-alpine AS builder
 
 WORKDIR /app
 
-# Copia o package.json e package-lock.json (se existir)
 COPY package*.json ./
+RUN npm ci
 
-# Instala as dependências
-RUN npm install
-
-# Copia todo o código fonte
 COPY . .
 
-# Constrói a aplicação
+# Build do Vite
 RUN npm run build
 
-# --- Estágio 2: Produção (Nginx) ---
+# Estágio 2: Servidor Nginx
 FROM nginx:alpine
 
-# Remove a configuração padrão do Nginx
+# Remove config padrão
 RUN rm /etc/nginx/conf.d/default.conf
 
-# Copia a configuração personalizada do Nginx
+# Copia config customizada
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Copia os arquivos estáticos gerados no estágio de build para o Nginx
-COPY --from=build /app/dist /usr/share/nginx/html
+# Copia os arquivos estáticos do build
+COPY --from=builder /app/dist /usr/share/nginx/html
 
-# Expõe a porta 80 (padrão web)
 EXPOSE 80
 
-# Inicia o Nginx
 CMD ["nginx", "-g", "daemon off;"]
