--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@eloorganico/froentend",
+  "name": "@elo-organico/frontend",
   "version": "1.0.0",
   "private": true,
   "scripts": {
