--- a/package.json
+++ b/package.json
@@ -6,18 +6,26 @@
     "packages/*"
   ],
   "scripts": {
-    "frontend:dev": "npm run dev -w @elo-organico/frontend",
-    "backend:dev": "npm run dev -w @elo-organico/backend",
-    "dev:stack": "concurrently \"npm run backend:dev\" \"npm run frontend:dev\"",
-
+    "postinstall": "npm run build -w @elo-organico/shared",
+    
+    "dev:frontend": "npm run dev -w @elo-organico/frontend",
+    "dev:backend": "npm run dev -w @elo-organico/backend",
+    "dev:stack": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
+    
+    "build:all": "npm run build --workspaces --if-present",
+    "backend:build": "npm run build -w @elo-organico/backend",
     "frontend:build": "npm run build -w @elo-organico/frontend",
+    "shared:build": "npm run build -w @elo-organico/shared",
+
     "frontend:preview": "npm run preview -w @elo-organico/frontend",
     
     "prod:up": "docker compose up -d --build",
     "docker:down": "docker compose down",
     "docker:logs": "docker compose logs -f",
+    
     "db:up": "docker compose up -d db",
-    "db:clean": "docker compose down --volumes"
+    "db:clean": "docker compose down --volumes",
+    "db:reset": "npm run db:clean && npm run db:up"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
