--- a/packages/backend/DockerFile
+++ b/packages/backend/DockerFile
@@ -3,39 +3,56 @@ FROM node:20-alpine AS builder
 
 WORKDIR /app
 
-# Copia apenas os arquivos de dependência primeiro (cache layer)
-COPY package*.json ./
+# 1. Copia os arquivos de dependência da RAIZ e de TODOS os pacotes
+# Isso é necessário para o 'npm ci' funcionar corretamente no monorepo
+COPY package.json package-lock.json ./
+COPY packages/backend/package.json ./packages/backend/
+COPY packages/frontend/package.json ./packages/frontend/
+COPY packages/shared/package.json ./packages/shared/
 
-# Instala dependências (incluindo devDependencies para rodar o tsc)
+# 2. Instala todas as dependências (incluindo devDependencies para rodar o tsc)
 RUN npm ci
 
-# Copia o código fonte e configs
-COPY tsconfig.json ./
-COPY src ./src
-COPY types ./types
+# 3. Copia o código fonte do Shared e do Backend
+COPY packages/shared ./packages/shared
+COPY packages/backend ./packages/backend
 
-# Compila o TypeScript para JavaScript (gera pasta dist)
+# 4. Compila o Shared PRIMEIRO (o backend depende dele)
+WORKDIR /app/packages/shared
 RUN npm run build
 
-# Estágio 2: Produção
+# 5. Compila o Backend DEPOIS
+WORKDIR /app/packages/backend
+RUN npm run build
+
+# --- Estágio Runner (Produção) ---
 FROM node:20-alpine AS runner
 
 WORKDIR /app
 
-# Define ambiente como produção
 ENV NODE_ENV=production
 
-# Copia package.json para instalar apenas dependências de produção
-COPY package*.json ./
+# Adiciona usuário não-root por segurança (Best Practice)
+USER node
 
-# Instala APENAS dependencies (remove devDependencies)
-RUN npm ci --only=production
+# Copia as dependências instaladas (node_modules mantendo os symlinks dos workspaces)
+# Nota: Copiamos tudo do builder para garantir que os links simbólicos funcionem
+COPY --from=builder --chown=node:node /app/node_modules ./node_modules
 
-# Copia o build gerado no estágio anterior
-COPY --from=builder /app/dist ./dist
+# Copia os artefatos compilados do Shared
+COPY --from=builder --chown=node:node /app/packages/shared/dist ./packages/shared/dist
+COPY --from=builder --chown=node:node /app/packages/shared/package.json ./packages/shared/
 
-# Expõe a porta que o Fastify usa (geralmente 3000 ou definido via ENV)
+# Copia os artefatos compilados do Backend
+COPY --from=builder --chown=node:node /app/packages/backend/dist ./packages/backend/dist
+COPY --from=builder --chown=node:node /app/packages/backend/package.json ./packages/backend/
+
+# Variável auxiliar caso precise resolver caminhos manualmente, 
+# mas os symlinks em node_modules devem cuidar disso.
+ENV NODE_PATH=./packages
+
+# Expõe a porta definida no seu .env (padrão 3000)
 EXPOSE 3000
 
-# Comando de inicialização
-CMD ["node", "dist/server.js"]
+# Comando para iniciar o servidor compilado
+CMD ["node", "packages/backend/dist/server.js"]
