--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -1,29 +1,31 @@
 {
-    "name": "@elo-organico/backend",
-    "version": "1.0.0",
-    "private": true,
-    "main": "dist/server.js",
-    "scripts": {
-        "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-        "build": "tsc",
-        "start": "node dist/server.js"
-    },
-    "dependencies": {
-        "@fastify/cookie": "^11.0.2",
-        "@fastify/cors": "^11.1.0",
-        "@fastify/env": "^5.0.3",
-        "@fastify/jwt": "^10.0.0",
-        "@fastify/one-line-logger": "^2.0.2",
-        "@fastify/session": "^11.1.1",
-        "@types/bcrypt": "^6.0.0",
-        "bcrypt": "^6.0.0",
-        "fastify": "^5.6.2",
-        "fastify-plugin": "^4.5.1",
-        "mongoose": "^8.19.4"
-    },
-    "devDependencies": {
-        "@types/node": "^20.12.12",
-        "ts-node-dev": "^2.0.0",
-        "typescript": "~5.8.3"
-    }
+  "name": "@elo-organico/backend",
+  "version": "1.0.0",
+  "private": true,
+  "main": "dist/server.js",
+  "scripts": {
+    "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js"
+  },
+  "dependencies": {
+    "@fastify/cookie": "^11.0.2",
+    "@fastify/cors": "^11.1.0",
+    "@fastify/env": "^5.0.3",
+    "@fastify/jwt": "^10.0.0",
+    "@fastify/one-line-logger": "^2.0.2",
+    "@fastify/session": "^11.1.1",
+    "@types/bcrypt": "^6.0.0",
+    "bcrypt": "^6.0.0",
+    "fastify": "^5.6.2",
+    "fastify-plugin": "^4.5.1",
+    "mongoose": "^8.19.4",
+    "tsconfig-paths": "^4.2.0",
+    "@elo-organico/shared": "*"
+  },
+  "devDependencies": {
+    "@types/node": "^20.12.12",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "~5.8.3"
+  }
 }
