--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -10,6 +10,13 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
 
+    "baseUrl": ".",
+    "paths": {
+        "@elo-organico/shared": ["../shared/src/index.ts"]
+    }
   },
-  "include": ["src"]
+  "include": ["src"],
+  "references": [
+        { "path": "../shared" }
+    ]
 }
