--- a/packages/frontend/DockerFile
+++ b/packages/frontend/DockerFile
@@ -1,14 +1,30 @@
-# Estágio 1: Build
 FROM node:20-alpine AS builder
 
 WORKDIR /app
 
-COPY package*.json ./
+# 1. Copia os arquivos de dependência da RAIZ e dos PACOTES
+# Precisamos do package.json da raiz para entender os workspaces
+COPY package.json package-lock.json ./
+COPY packages/frontend/package.json ./packages/frontend/
+COPY packages/shared/package.json ./packages/shared/
+
+# 2. Instala dependências (o npm vai linkar o shared automaticamente)
 RUN npm ci
 
-COPY . .
+# 3. Copia o código fonte
+# Copiamos o shared primeiro para garantir que o TS consiga ler
+COPY packages/shared ./packages/shared
+COPY packages/frontend ./packages/frontend
 
-# Build do Vite
+# 4. Build do Shared (Necessário se o frontend depende dos .d.ts gerados)
+# Se você usa a configuração de "paths" apenas, talvez não precise, 
+# mas é mais seguro buildar o shared para produção.
+WORKDIR /app/packages/shared
+RUN npm run build
+
+# 5. Build do Frontend
+WORKDIR /app/packages/frontend
+# O script "build" deve ser "tsc && vite build" para garantir segurança de tipos
 RUN npm run build
 
 # Estágio 2: Servidor Nginx
@@ -17,11 +33,11 @@ FROM nginx:alpine
 # Remove config padrão
 RUN rm /etc/nginx/conf.d/default.conf
 
-# Copia config customizada
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+# Copia config customizada (note o caminho ajustado para context root)
+COPY packages/frontend/nginx.conf /etc/nginx/conf.d/default.conf
 
 # Copia os arquivos estáticos do build
-COPY --from=builder /app/dist /usr/share/nginx/html
+COPY --from=builder /app/packages/frontend/dist /usr/share/nginx/html
 
 EXPOSE 80
 
