--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -1,14 +1,25 @@
 {
   "name": "@elo-organico/backend",
-  "version": "1.0.0",
+  "version": "0.1.0",
+  "author": "Tupynambá Lucas Varela Rodrigues <tupynambalucas.dev>",
+  "license": "CC-BY-NC-4.0",
+  "homepage": "https://github.com/tupynambalucas/EloOrganico/tree/main/packages/backend#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tupynambalucas/EloOrganico.git",
+    "directory": "packages/backend"
+  },
   "private": true,
   "main": "dist/server.js",
   "scripts": {
+    "clean": "rimraf dist",
     "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/server.ts",
-    "build": "tsc",
-    "start": "node dist/server.js"
+    "build": "npm run clean && tsc -p tsconfig.build.json",
+    "start": "node dist/server.js",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@elo-organico/shared": "*",
     "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.1.0",
     "@fastify/env": "^5.0.3",
@@ -19,9 +30,10 @@
     "bcrypt": "^6.0.0",
     "fastify": "^5.6.2",
     "fastify-plugin": "^4.5.1",
+    "fastify-type-provider-zod": "^4.0.2",
     "mongoose": "^8.19.4",
     "tsconfig-paths": "^4.2.0",
-    "@elo-organico/shared": "*"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
