--- a/package.json
+++ b/package.json
@@ -12,32 +12,35 @@
   "workspaces": [
     "packages/*"
   ],
-"scripts": {
+  "scripts": {
+    "// --- 1. Lifecycle & Install ---": "",
     "postinstall": "npm run build -w @elo-organico/shared",
-    
+
+    "// --- 2. Development (Local Stack) ---": "",
     "dev:frontend": "npm run dev -w @elo-organico/frontend",
     "dev:backend": "npm run dev -w @elo-organico/backend",
     "dev:stack": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
-    
+
+    "// --- 3. Build & Compilation ---": "",
     "build:all": "npm run build --workspaces --if-present",
-    
     "backend:build": "npm run build -w @elo-organico/backend",
     "frontend:build": "npm run build -w @elo-organico/frontend",
     "shared:build": "npm run build -w @elo-organico/shared",
-    
-    "// --- Scripts de Manutenção (Enterprise) ---": "",
+
+    "// --- 4. Maintenance (Clean & Check) ---": "",
     "clean": "npm run clean --workspaces --if-present",
     "lint:all": "npm run lint --workspaces --if-present",
     "typecheck:all": "npm run typecheck --workspaces --if-present",
-    
-    "// --- Docker ---": "",
-    "prod:up": "docker compose up -d --build",
-    "docker:down": "docker compose down",
-    "docker:logs": "docker compose logs -f",
-    
+
+    "// --- 5. Database (Development Mode) ---": "",
     "db:up": "docker compose up -d db",
     "db:clean": "docker compose down --volumes",
-    "db:reset": "npm run db:clean && npm run db:up"
+    "db:reset": "npm run db:clean && npm run db:up",
+
+    "// --- 6. Production (Docker Simulation) ---": "",
+    "prod:up": "docker compose -f docker-compose.yml -f docker-compose.prod.yml up -d --build",
+    "prod:down": "docker compose -f docker-compose.yml -f docker-compose.prod.yml down",
+    "prod:logs": "docker compose -f docker-compose.yml -f docker-compose.prod.yml logs -f"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
