--- a/packages/backend/.gitignore
+++ b/packages/backend/.gitignore
@@ -5,12 +5,8 @@ node_modules/
 dist/
 
 # Variáveis de Ambiente (CRÍTICO)
-.env
-.env.local
-.env.test
-*.env
-# Mantemos o example visível
-!.env.example
+.env/
+
 
 # Logs e diagnósticos
 logs/
