--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,8 @@ Thumbs.db
 *.log
 node_modules/
 /package-lock.json
-/.env
-/.env.prod.template
+.env
+.env.prod.template
 # Se usar IDEs como IntelliJ ou VS Code
 .idea/
 .vscode/
