--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -32,6 +32,7 @@
     "fastify-plugin": "^4.5.1",
     "fastify-type-provider-zod": "^4.0.2",
     "mongoose": "^8.19.4",
+    "sdk-node-apis-efi": "^1.2.25",
     "tsconfig-paths": "^4.2.0",
     "zod": "^3.24.1"
   },
