--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,52 @@
 # ---------------------------------------------------------------- #
-# IGNORAR ARQUIVOS GERAIS DE PROJETOS DE DESENVOLVIMENTO
+#  GLOBAL MONOREPO GITIGNORE
 # ---------------------------------------------------------------- #
-.DS_Store
-Thumbs.db
-*.log
-mongo-keyfile
-node_modules/
-/package-lock.json
-.env
-.env.prod.template
 
-# Se usar IDEs como IntelliJ ou VS Code
+# --- Dependências & Gerenciadores de Pacote ---
+node_modules/
+.pnpm-store/
+# Nota: Em ambientes profissionais, o package-lock.json DEVE ser comitado
+# para garantir builds reprodutíveis. Removi a linha que o ignorava.
+
+# --- Builds e Compilação (Frontend, Backend & Shared) ---
+dist/
+build/
+out/
+coverage/
+*.tsbuildinfo
+
+# --- Ambiente e Segredos (CRÍTICO) ---
+# Ignora todos os arquivos de env
+.env
+.env.*
+# Exceções: Mantém arquivos de exemplo/template visíveis
+!.env.example
+!.env.prod.template
+!.env.dev.template
+
+# Chaves e Certificados
+mongo-keyfile
+*.p12
+*.pem
+*.key
+
+# --- Logs e Diagnósticos ---
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
+
+# --- IDEs e Editores ---
 .idea/
 .vscode/
+*.swp
+*.swo
+*.swn
+
+# --- Sistema Operacional ---
+.DS_Store
+Thumbs.db
+ehthumbs.db
