--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -15,19 +15,23 @@
     "clean": "rimraf dist",
     "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/server.ts",
     "build": "npm run clean && tsc -p tsconfig.build.json",
-    "start": "node dist/server.js",
+    "seed": "tsx src/scripts/seedAdmin.ts",
+    "seed:prod": "node dist/scripts/seedAdmin.js",
+    "start": "npm run seed:prod && node dist/server.js",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@elo-organico/shared": "*",
     "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.1.0",
+    "@fastify/csrf-protection": "^7.1.0",
     "@fastify/env": "^5.0.3",
     "@fastify/jwt": "^10.0.0",
     "@fastify/one-line-logger": "^2.0.2",
     "@fastify/session": "^11.1.1",
     "@types/bcrypt": "^6.0.0",
     "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
     "fastify-plugin": "^4.5.1",
     "fastify-type-provider-zod": "^4.0.2",
@@ -39,6 +43,7 @@
   "devDependencies": {
     "@types/node": "^20.12.12",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.21.0",
     "typescript": "~5.8.3"
   }
 }
