--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -29,13 +29,17 @@
     "@fastify/jwt": "^10.0.0",
     "@fastify/one-line-logger": "^2.0.2",
     "@fastify/session": "^11.1.1",
+    "@sentry/node": "^10.30.0",
+    "@sentry/profiling-node": "^10.30.0",
     "@types/bcrypt": "^6.0.0",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
+    "fastify-metrics": "^12.1.0",
     "fastify-plugin": "^4.5.1",
     "fastify-type-provider-zod": "^4.0.2",
     "mongoose": "^8.19.4",
+    "pino-roll": "^4.0.0",
     "sdk-node-apis-efi": "^1.2.25",
     "tsconfig-paths": "^4.2.0",
     "zod": "^3.24.1"
