--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -11,9 +11,10 @@
   },
   "private": true,
   "scripts": {
-    "dev": "vite",
-    "typecheck": "tsc --noEmit",
-    "build": "tsc && vite build", 
+    "dev": "concurrently \"npm run watch:css\" \"vite\"",
+    "build": "npm run gen:css && tsc && vite build",
+    "gen:css": "tcm src --camelCase",
+    "watch:css": "tcm src --watch --camelCase",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -24,11 +25,14 @@
     "@fortawesome/free-regular-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
+    "axios": "^1.13.2",
     "date-fns": "^4.1.0",
     "gsap": "^3.13.0",
+    "i18next": "^25.7.3",
     "react": "^19.2.0",
     "react-datepicker": "^8.10.0",
     "react-dom": "^19.2.0",
+    "react-i18next": "^16.5.0",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
@@ -37,10 +41,13 @@
     "@types/react-dom": "^19.0.0-rc.0",
     "@vitejs/plugin-react-swc": "^4.0.0",
     "eslint": "^9.33.0",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "typed-css-modules": "^0.9.1",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
     "vite": "^7.1.2",
