--- a/package.json
+++ b/package.json
@@ -49,6 +49,12 @@
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
-    "rimraf": "^6.1.2"
+    "rimraf": "^6.1.2",
+    "eslint": "^9.33.0",
+    "@eslint/js": "^9.33.0",
+    "globals": "^16.3.0",
+    "typescript-eslint": "^8.39.1",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0"
   }
 }
