--- a/packages/frontend/nginx.conf
+++ b/packages/frontend/nginx.conf
@@ -3,19 +3,40 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Compressão (Já está bom, mas pode adicionar mais tipos)
     gzip on;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml;
 
-    location / {
-        try_files $uri $uri/ /index.html;
+    # Cache para arquivos estáticos (Assets do Vite com hash)
+    location /assets/ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        access_log off;
     }
 
+    # Cache para outros arquivos estáticos
+    location ~* \.(?:ico|css|js|gif|jpe?g|png|svg|woff2?)$ {
+        expires 6M;
+        access_log off;
+        add_header Cache-Control "public";
+    }
+
+    # Rota principal (SPA) - Sem cache para garantir updates do HTML
+    location / {
+        try_files $uri $uri/ /index.html;
+        add_header Cache-Control "no-store, no-cache, must-revalidate";
+    }
+
+    # Proxy Reverso API
     location /api/ {
-        proxy_pass http://backend:3000/;
+        # A barra no final (3000/) remove o /api da requisição que chega no node
+        proxy_pass http://backend:3000/; 
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr; # Importante para logs do backend
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_cache_bypass $http_upgrade;
     }
 }
