--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,6 +4,11 @@ services:
       - "27017:27017"
     restart: "no"
 
+  redis:
+    ports:
+      - "6379:6379"
+    restart: "no"
+
   backend:
     ports:
       - "3000:3000"
