--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -34,11 +34,13 @@
     "@sentry/profiling-node": "^10.30.0",
     "@types/bcrypt": "^6.0.0",
     "bcrypt": "^6.0.0",
+    "bullmq": "^5.66.0",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
     "fastify-metrics": "^12.1.0",
     "fastify-plugin": "^4.5.1",
     "fastify-type-provider-zod": "^4.0.2",
+    "ioredis": "^5.8.2",
     "mongoose": "^8.19.4",
     "pino-roll": "^4.0.0",
     "sdk-node-apis-efi": "^1.2.25",
@@ -46,6 +48,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/ioredis": "^4.28.10",
     "@types/node": "^20.12.12",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.21.0",
