--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ coverage/
 *.tsbuildinfo
 
 # --- Arquivos (Frontend) ---
-*.module.css.d.ts
+*.css.d.ts
 
 # --- Ambiente e Segredos (CRÍTICO) ---
 # Ignora todos os arquivos de env
