--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -12,10 +12,8 @@
   },
   "private": true,
   "scripts": {
-    "dev": "concurrently \"npm run watch:css\" \"vite\"",
-    "build": "npm run gen:css && tsc && vite build",
-    "gen:css": "tcm src --camelCase",
-    "watch:css": "tcm src --watch --camelCase",
+    "dev": "vite",
+    "build": "tsc && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -46,8 +44,8 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "tailwindcss": "^4.1.18",
-    "typed-css-modules": "^0.9.1",
     "typescript": "~5.8.3",
+    "typescript-plugin-css-modules": "^5.2.0",
     "vite": "^7.1.2",
     "vite-plugin-svgr": "^4.3.0",
     "vite-tsconfig-paths": "^5.1.4"
