--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "@elo-organico/shared": "*",
-    "@fontsource/inter": "^5.2.8",
+    "@fontsource/nunito": "^5.2.7",
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
     "@fortawesome/free-brands-svg-icons": "^7.1.0",
     "@fortawesome/free-regular-svg-icons": "^7.1.0",
