--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/free-regular-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
+    "@gsap/react": "^2.1.2",
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
     "gsap": "^3.13.0",
