--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "infra:down": "docker compose down",
     "infra:clean": "docker compose down --volumes",
     "infra:reset": "npm run infra:clean && npm run infra:up",
-    "infra:gen-key": "echo \"CHAVE_FALSA_PARA_DEV_$(date +%s)\" > mongo-keyfile && echo \"✅ Keyfile gerado!\"",
+    "infra:gen-key": "docker run --rm alpine sh -c 'apk add --no-cache openssl && openssl rand -base64 756' > mongo-keyfile && echo \"✅ Keyfile gerado via Docker!\"",
     "// [4] BUILD E VERIFICAÇÃO": "-------------------------------------------------------",
     "build:all": "npm run build --workspaces --if-present",
     "backend:build": "npm run build -w @elo-organico/backend",
