mongo-keyfile update

--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "dev:stack": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "backend:seed": "npm run seed -w @elo-organico/backend",
     "// [3] INFRAESTRUTURA LOCAL (DOCKER)": "-------------------------------------------------------",
-    "infra:up": "docker compose up -d db redis",
+    "infra:keygen": "node -e \"const fs=require('fs'); if(!fs.existsSync('mongo-keyfile')){fs.writeFileSync('mongo-keyfile', require('crypto').randomBytes(756).toString('base64')); console.log('✅ mongo-keyfile gerado com sucesso!')} else {console.log('ℹ️ mongo-keyfile já existe.')}\"",
+    "infra:up": "npm run infra:keygen && docker compose up -d db redis",
     "infra:stop": "docker compose stop",
     "infra:down": "docker compose down",
-    "infra:clean": "docker compose down --volumes",
+    "infra:clean": "docker compose down --volumes && node -e \"const fs=require('fs'); if(fs.existsSync('mongo-keyfile')) fs.unlinkSync('mongo-keyfile')\"",
     "infra:reset": "npm run infra:clean && npm run infra:up",
-    "infra:gen-key": "docker run --rm alpine sh -c 'apk add --no-cache openssl && openssl rand -base64 756' > mongo-keyfile && echo \"✅ Keyfile gerado via Docker!\"",
     "// [4] BUILD E VERIFICAÇÃO": "-------------------------------------------------------",
     "build:all": "npm run build --workspaces --if-present",
     "backend:build": "npm run build -w @elo-organico/backend",
