--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,15 +13,7 @@ services:
         chown 999:999 /data/mongo-keyfile
         echo "Starting MongoDB..."
         exec docker-entrypoint.sh $$@
-    command:
-      [
-        "mongod",
-        "--replSet",
-        "rs0",
-        "--bind_ip_all",
-        "--keyFile",
-        "/data/mongo-keyfile",
-      ]
+    command: [ "mongod", "--replSet", "rs0", "--bind_ip_all", "--keyFile", "/data/mongo-keyfile" ]
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_USER}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
@@ -36,7 +28,7 @@ services:
       test: |
         test $$(mongosh -u "$$MONGO_INITDB_ROOT_USERNAME" -p "$$MONGO_INITDB_ROOT_PASSWORD" --authenticationDatabase admin --quiet --eval "try { rs.status().ok } catch(e) { 0 }") -eq 1 \
         || mongosh -u "$$MONGO_INITDB_ROOT_USERNAME" -p "$$MONGO_INITDB_ROOT_PASSWORD" --authenticationDatabase admin --quiet --eval "rs.initiate({_id: 'rs0', members: [{_id: 0, host: 'db:27017'}]})"
-      interval: 10s
+      interval: 20s
       timeout: 10s
       retries: 5
       start_period: 20s
@@ -50,7 +42,7 @@ services:
     networks:
       - elo_network
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
+      test: [ "CMD", "redis-cli", "ping" ]
       interval: 10s
       timeout: 5s
       retries: 3
@@ -75,7 +67,6 @@ services:
       - JWT_SECRET=${JWT_SECRET}
       - SESSION_SECRET=${SESSION_SECRET}
       - USER_SESSION_KEY=${USER_SESSION_KEY}
-      - ADMIN_SESSION_KEY=${ADMIN_SESSION_KEY}
       - ADMIN_USER_SEED=${ADMIN_USER_SEED}
       - ADMIN_EMAIL_SEED=${ADMIN_EMAIL_SEED}
       - ADMIN_PASS_SEED=${ADMIN_PASS_SEED}
@@ -84,15 +75,7 @@ services:
     networks:
       - elo_network
     healthcheck:
-      test:
-        [
-          "CMD",
-          "wget",
-          "--no-verbose",
-          "--tries=1",
-          "--spider",
-          "http://localhost:3000/health",
-        ]
+      test: [ "CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/health" ]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -113,6 +96,7 @@ volumes:
   mongo_data:
   backend_logs:
   redis_data:
+
 
 networks:
   elo_network:
